# libmuvi

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindLibMemcached.cmake
include/: muvi-adapter-disk.hpp  muvi-adapter-http-config.hpp  muvi-adapter-http.hpp  muvi-adapter-memcached.hpp  muvi-adapter-redis.hpp  muvi-data.hpp  muvi-exceptions.hpp  muvi-interpolator-idw.hpp  muvi-interpolator-kriging.hpp  muvi-interpolator-linear.hpp  muvi-interpolator.hpp  muvi-neighbour-bin.hpp  muvi-store-lsh.hpp  muvi-store.hpp
src/: dump.txt  muvi-adapter-disk.cpp  muvi-adapter-http.cpp  muvi-adapter-memcached.cpp  muvi-data.cpp  muvi-interpolator-idw.cpp  muvi-interpolator-kriging.cpp  muvi-interpolator-linear.cpp  muvi-neighbour-bin.cpp  muvi-store-lsh.cpp  muvi.cpp
